[package]
name = "chat_socket"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
once_cell = "1.9.0"
querystring = "1.1.0"

# core
core = { path = "../core" }

# serde
serde_json = "1.0.79"
rmp-serde = "1.0.0"
serde = "1.0.136"

# async
futures = "0.3.21"
async-tungstenite = { version = "0.23.0", features = ["async-std-runtime"] }
async-std = { version = "1.8.0", features = [
    "tokio1",
    "tokio02",
    "attributes",
] }
